--- a/ProjetCubic/ProjetCubic.csproj
+++ b/ProjetCubic/ProjetCubic.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Slider.cs" />
     <Compile Include="Spiner.cs" />
+    <Compile Include="TimingPoint.cs" />
     <EmbeddedResource Include="FrmCubic.resx">
       <DependentUpon>FrmCubic.cs</DependentUpon>
     </EmbeddedResource>
